Add custom FileStorage to manage S3/local settings

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -47,8 +47,9 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location ~* \.(jpg|jpeg|png|gif|svg|css|js|woff2?)$ {
+    location ~* \.(?:ico|jpg|jpeg|png|gif|svg|css|js|woff2?)$ {
         expires 30d;
         access_log off;
+        try_files $uri =404;
     }
 }
