--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,5 +1,12 @@
 FROM nginx:1.27-alpine
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY . /var/www/html
 WORKDIR /var/www/html
+
+# Set proper permissions for static files
+RUN chown -R nginx:nginx /var/www/html && \
+    find /var/www/html -type f -exec chmod 644 {} \; && \
+    find /var/www/html -type d -exec chmod 755 {} \;
+
 EXPOSE 8080
 CMD ["nginx","-g","daemon off;"]
