--- a/compose.yml
+++ b/compose.yml
@@ -22,6 +22,8 @@ services:
       - php-fpm
     ports:
       - "8080:8080"
+    volumes:
+      - ./:/var/www/html:z
 
   mysql:
     image: mysql:8.0
