--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -2,7 +2,7 @@ name: Deploy to ECS (Fargate)
 
 on:
   push:
-    branches: [development]
+    branches: [main development]
   workflow_dispatch:
 
 jobs:
