--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,9 @@ server {
     root /var/www/html/public;
     index index.php index.html;
 
+    # Increase max body size for file uploads
+    client_max_body_size 100M;
+
     # Gzip compression settings
     gzip on;
     gzip_vary on;
